@@ -6,7 +6,7 @@
 
 #AM_CFLAGS = @AUDIO_CFLAGS@
 #AM_LDFLAGS = 
-INCLUDES = -I$(top_srcdir)/src -I$(top_srcdir)/src/libmpg123
+AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/src/libmpg123
 
 EXTRA_DIST = mpg123.h.in
 
